[metadata]
name = chatformers
version = 1.0.0
author = Dipesh Paul
author_email = dipeshpal17@gmail.com
description = Chatformers is a Python package that simplifies chatbot development by automatically managing chat history using local vector databases like Chroma DB.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dipeshpaulsystango/auto_llm_chatbot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    ollama==0.3.2
    openai==1.43.0
    lazyme==0.0.27
    chromadb==0.5.3
    tqdm==4.66.5